# gencppm

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md
.forgejo/workflows/: lint.yml
.github/workflows/: lint.yml
.reuse/: dep5
cmake/: PatchUtil.cmake  gencppm.cmake  gencppm_generate.cmake  std.cmake
module_shims/: CMakeLists.txt  generate_llvm_shims.cmake  generate_std_shim.cmake
module_shims/llvm_generated/: CMakeLists.txt
module_shims/llvm_generated/clang_ast/: clang_ast.cppm  clang_ast.hpp
module_shims/llvm_generated/clang_astmatchers/: clang_astmatchers.cppm  clang_astmatchers.hpp
module_shims/llvm_generated/clang_basic/: clang_basic.cppm  clang_basic.hpp
module_shims/llvm_generated/clang_frontend/: clang_frontend.cppm  clang_frontend.hpp
module_shims/llvm_generated/clang_lex/: clang_lex.cppm  clang_lex.hpp
module_shims/llvm_generated/clang_parse/: clang_parse.cppm  clang_parse.hpp
module_shims/llvm_generated/clang_rewrite/: clang_rewrite.cppm  clang_rewrite.hpp
module_shims/llvm_generated/clang_sema/: clang_sema.cppm  clang_sema.hpp
module_shims/llvm_generated/clang_support/: clang_support.cppm  clang_support.hpp
module_shims/llvm_generated/clang_tooling/: clang_tooling.cppm  clang_tooling.hpp
module_shims/llvm_generated/llvm_support/: llvm_support.cppm  llvm_support.hpp
module_shims/std_generated/: CMakeLists.txt
module_shims/std_generated/gencppm_std-gcc13/: gencppm_std.cppm  gencppm_std.hpp
module_shims/std_generated/gencppm_std-gcc14/: gencppm_std.cppm
module_shims/std_generated/std/: std.cppm  std.hpp
patches/: dpp.patch
src/: any_of.cpp  ast_consumer.cpp  ast_visitor.cpp  includefirst.hpp  main.cpp  module.cpp  namespace.cpp  stringfix.cpp
