# Auto generated CMakeLists.txt
add_library(clang_ast)
target_sources(clang_ast PUBLIC FILE_SET CXX_MODULES FILES clang_ast/clang_ast.cppm)
llvm_update_compile_flags(clang_ast)
target_link_libraries(clang_ast PUBLIC clangAST)
add_library(clang::ast ALIAS clang_ast)
add_library(clang_astmatchers)
target_sources(clang_astmatchers PUBLIC FILE_SET CXX_MODULES FILES clang_astmatchers/clang_astmatchers.cppm)
llvm_update_compile_flags(clang_astmatchers)
target_link_libraries(clang_astmatchers PUBLIC clangASTMatchers)
add_library(clang::astmatchers ALIAS clang_astmatchers)
add_library(clang_basic)
target_sources(clang_basic PUBLIC FILE_SET CXX_MODULES FILES clang_basic/clang_basic.cppm)
llvm_update_compile_flags(clang_basic)
target_link_libraries(clang_basic PUBLIC clangBasic)
add_library(clang::basic ALIAS clang_basic)
add_library(clang_frontend)
target_sources(clang_frontend PUBLIC FILE_SET CXX_MODULES FILES clang_frontend/clang_frontend.cppm)
llvm_update_compile_flags(clang_frontend)
target_link_libraries(clang_frontend PUBLIC clangFrontend)
add_library(clang::frontend ALIAS clang_frontend)
add_library(clang_lex)
target_sources(clang_lex PUBLIC FILE_SET CXX_MODULES FILES clang_lex/clang_lex.cppm)
llvm_update_compile_flags(clang_lex)
target_link_libraries(clang_lex PUBLIC clangLex)
add_library(clang::lex ALIAS clang_lex)
add_library(clang_parse)
target_sources(clang_parse PUBLIC FILE_SET CXX_MODULES FILES clang_parse/clang_parse.cppm)
llvm_update_compile_flags(clang_parse)
target_link_libraries(clang_parse PUBLIC clangParse)
add_library(clang::parse ALIAS clang_parse)
add_library(clang_rewrite)
target_sources(clang_rewrite PUBLIC FILE_SET CXX_MODULES FILES clang_rewrite/clang_rewrite.cppm)
llvm_update_compile_flags(clang_rewrite)
target_link_libraries(clang_rewrite PUBLIC clangRewrite)
add_library(clang::rewrite ALIAS clang_rewrite)
add_library(clang_sema)
target_sources(clang_sema PUBLIC FILE_SET CXX_MODULES FILES clang_sema/clang_sema.cppm)
llvm_update_compile_flags(clang_sema)
target_link_libraries(clang_sema PUBLIC clangSema)
add_library(clang::sema ALIAS clang_sema)
add_library(clang_support)
target_sources(clang_support PUBLIC FILE_SET CXX_MODULES FILES clang_support/clang_support.cppm)
llvm_update_compile_flags(clang_support)
target_link_libraries(clang_support PUBLIC clangSupport)
add_library(clang::support ALIAS clang_support)
add_library(clang_tooling)
target_sources(clang_tooling PUBLIC FILE_SET CXX_MODULES FILES clang_tooling/clang_tooling.cppm)
llvm_update_compile_flags(clang_tooling)
target_link_libraries(clang_tooling PUBLIC clangTooling)
add_library(clang::tooling ALIAS clang_tooling)
add_library(llvm_support)
target_sources(llvm_support PUBLIC FILE_SET CXX_MODULES FILES llvm_support/llvm_support.cppm)
llvm_update_compile_flags(llvm_support)
target_link_libraries(llvm_support PUBLIC LLVMSupport)
add_library(llvm::support ALIAS llvm_support)
